# COS-214

./: .gitignore
Practicals/PA1/Task2/: main.h
Practicals/PA1/Task3/: calculator.cpp  main.cpp
Practicals/Practical 1/: CMakeLists.txt
Practicals/Practical 1/Task 2/: main.cpp  main.h  makefile
Practicals/Practical 1/Task 3/: calculator.cpp  calculator.h  main.cpp  makefile
Practicals/Practical 1/Task 4/: main.cpp  makefile
Practicals/Practical 1/Task 5/: main.cpp
Practicals/Practical 1/Task 6/: AuditableSnapshot.h  Snapshot.cpp  Snapshot.h  User.cpp  User.h  UserManager.cpp  UserManager.h  main.cpp  makefile
Practicals/Practical 1/Task3/: main.cpp
Practicals/Practical 2/: CMakeLists.txt  Cannibal.cpp  Cannibal.h  CannibalFactory.cpp  CannibalFactory.h  Commander.cpp  Commander.h  Enemy.cpp  Enemy.h  EnemyFactory.cpp  EnemyFactory.h  EnemyMemento.cpp  EnemyMemento.h  EnemyState.cpp  EnemyState.h  EnemyStore.cpp  EnemyStore.h  GameMemento.cpp  GameMemento.h  GameState.cpp  GameState.h  GameStore.cpp  GameStore.h  Gorilla.cpp  Gorilla.h  GorillaFactory.cpp  GorillaFactory.h  Jaguar.cpp  Jaguar.h  JaguarFactory.cpp  JaguarFactory.h  Mercenary.cpp  Mercenary.h  Snake.cpp  Snake.h  SnakeFactory.cpp  SnakeFactory.h  Soldier.cpp  Soldier.h  SquadMember.cpp  (+5 more)
Practicals/Practical 3/: CMakeLists.txt  main.cpp
Practicals/Practical 3/Section A/: AeratedChocolate.cpp  AeratedChocolate.h  Areo.h  CadburyFactory.cpp  CadburyFactory.h  Chocolate.cpp  Chocolate.h  Confectionery.cpp  Confectionery.h  ConfectioneryFactory.cpp  ConfectioneryFactory.h  DiaryMilk.h  DiaryMilkBubbly.h  Lindor.h  LindtFactory.cpp  LindtFactory.h  MilkyBar.h  NestleFactory.cpp  NestleFactory.h
Practicals/Practical 3/Section B/: AgileBattleState.cpp  AgileBattleState.h  AttackPlayStyle.cpp  AttackPlayStyle.h  (+14 more)
Practicals/Practical 4/: CMakeLists.txt  Directory.h  File.cpp  File.h  Node.cpp  Node.h  capture
Practicals/Practical 4/Task 2/: Directory.cpp  Directory.h  File.cpp  File.h  Node.h  main.cpp
Practicals/Practical 4/Task 3/: Client.cpp  Client.h  Directory.cpp  Directory.h  DirectoryIterator.cpp  DirectoryIterator.h  File.cpp  File.h  FileFactory.cpp  FileFactory.h  FileIterator.cpp  FileIterator.h  Folder.cpp  Folder.h  FolderFactory.cpp  FolderFactory.h  Iterator.cpp  Iterator.h  Node.cpp  Node.h  NodeFactory.cpp  NodeFactory.h  NodeIterator.cpp  NodeIterator.h  main.cpp  makefile
Practicals/Practical 4/Task 4/: Directory.cpp  DirectoryIterator.cpp  File.cpp  File.h  Node.cpp  Node.h  NodeIterator.cpp  Snapshot.cpp  SnapshotStore.cpp  SnapshotStore.h  main.cpp
Practicals/Practical 4/Task 5/: Directory.cpp  Directory.h  DirectoryObserver.h  File.cpp  Node.h  Observer.h  Root.cpp  Root.h
Practicals/Practical 4/Task 6/: Antivirus.cpp  Antivirus.h  Directory.h  DirectoryIterator.h  DirectoryObserver.cpp  File.cpp  File.h  FileObserver.cpp  FileObserver.h  Node.cpp  Observer.cpp  Snapshot.h  main.cpp  makefile
