cmake_minimum_required(VERSION 3.22)
project(Practical_1)

set(CMAKE_CXX_STANDARD 23)

#"Task 6/main.cpp" "Task 6/User.cpp" "Task 6/User.h" "Task 6/UserManager.cpp" "Task 6/UserManager.h" "Task 6/Snapshot.cpp" "Task 6/Snapshot.h" "Task 6/AuditableSnapshot.h" "Task 6/AuditableSnapshot.cpp"
add_executable(task "Task 5/main.cpp")