cmake_minimum_required(VERSION 3.22.3)
project(Practical_4)

set(CMAKE_CXX_STANDARD 23)

add_executable(Practical_4 "Task 4/Directory.cpp" "Task 4/Directory.h" "Task 4/File.cpp" "Task 4/File.h" "Task 4/Node.cpp" "Task 4/Node.h" "Task 4/main.cpp" "Task 4/NodeIterator.cpp" "Task 4/NodeIterator.h" "Task 4/DirectoryIterator.cpp" "Task 4/DirectoryIterator.h" "Task 4/FileIterator.cpp" "Task 4/FileIterator.h")
