cmake_minimum_required(VERSION 3.22.3)
project(Practical_4)

set(CMAKE_CXX_STANDARD 23)

add_executable(Practical_4 "Task 5/Directory.cpp" "Task 5/Directory.h" "Task 5/File.cpp" "Task 5/File.h" "Task 5/Node.cpp" "Task 5/Node.h" "Task 5/main.cpp" "Task 5/NodeIterator.cpp" "Task 5/NodeIterator.h" "Task 5/DirectoryIterator.cpp" "Task 5/DirectoryIterator.h" "Task 5/FileIterator.cpp" "Task 5/FileIterator.h" "Task 5/Root.cpp" "Task 5/Root.h" "Task 5/Snapshot.cpp" "Task 5/Snapshot.h" "Task 5/SnapshotStore.cpp" "Task 5/SnapshotStore.h" "Task 5/Observer.cpp" "Task 5/Observer.h" "Task 5/FileObserver.cpp" "Task 5/FileObserver.h" "Task 5/DirectoryObserver.cpp" "Task 5/DirectoryObserver.h" "Task 5/Antivirus.cpp" "Task 5/Antivirus.h")
