cmake_minimum_required(VERSION 3.22.3)
project(Practical_4)

set(CMAKE_CXX_STANDARD 23)

add_executable(Practical_4 "Task 6/Directory.cpp" "Task 6/Directory.h" "Task 6/File.cpp" "Task 6/File.h" "Task 6/Node.cpp" "Task 6/Node.h" "Task 6/main.cpp" "Task 6/NodeIterator.cpp" "Task 6/NodeIterator.h" "Task 6/DirectoryIterator.cpp" "Task 6/DirectoryIterator.h" "Task 6/FileIterator.cpp" "Task 6/FileIterator.h" "Task 6/Root.cpp" "Task 6/Root.h" "Task 6/Snapshot.cpp" "Task 6/Snapshot.h" "Task 6/SnapshotStore.cpp" "Task 6/SnapshotStore.h" "Task 6/Observer.cpp" "Task 6/Observer.h" "Task 6/FileObserver.cpp" "Task 6/FileObserver.h" "Task 6/DirectoryObserver.cpp" "Task 6/DirectoryObserver.h" "Task 6/Antivirus.cpp" "Task 6/Antivirus.h")
